[project]
name = "prismarine"
version = "1.5.0"
description = "Pythonic DynamoDB ORM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.19",
    "case-converter>=1.2.0",
    "click>=8.2.0",
    "gray-formatter>=3.0.10",
    "mako>=1.3.10",
    "types-boto3[dynamodb]>=1.38.19",
]

[project.optional-dependencies]
pydantic = [
    "pydantic>=2.9.0",
]

[project.urls]
Homepage = "https://github.com/adsight-app/prismarine"
Changelog = "https://github.com/adsight-app/prismarine/blob/main/CHANGELOG.md"

[project.scripts]
prismarine = "prismarine.cli:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pip>=25.1.1",
    "pydantic>=2.9.0",
    "pytest>=8.3.3",
    "twine>=6.1.0",
]
